tests/unit-fail-compilation/j061c.c.ref
j061c.c:1:1: error: Structs must contain a named member.
  Undefined behavior (UB-CDT1).
   see C11 section 6.7.2.1:8 http://rvdoc.org/C11/6.7.2.1
   see C11 section J.2:1 item 61 http://rvdoc.org/C11/J.2
   see CERT-C section MSC15-C http://rvdoc.org/CERT-C/MSC15-C
   see MISRA-C section 8.1:3 http://rvdoc.org/MISRA-C/8.1
Translation failed (kcc_config dumped). To repeat, run this command in directory unit-fail-compilation:
kcc -d -Werror -Wfatal-errors j061c.c
