tests/unit-fail-compilation/j061c.c
struct s {
      int : 4;
      int : 2;
};

int main(void) {
      return 0;
}
